--- a/.github/workflows/azure-terraform.yml
+++ b/.github/workflows/azure-terraform.yml
@@ -3,8 +3,7 @@ name: Terraform Azure Deployment
 on:
   push:
     branches:
-    - main
-  workflow_dispatch:
+    - master
 
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
