--- a/.github/workflows/azure-terraform.yml
+++ b/.github/workflows/azure-terraform.yml
@@ -27,7 +27,15 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan -out=tfplan
+      id: plan
+      run: |
+        terraform plan -out=tfplan \
+        -var="client_id=${{ secrets.ARM_CLIENT_ID }}" \
+        -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
+        -var="subscription_id=${{ secrets.ARM_SUBSCRIPTION_ID }}" \
+        -var="tenant_id=${{ secrets.ARM_TENANT_ID }}" \
+        -var="admin_password=${{ secrets.ARM_ADMIN_PASSWORD }}" \
+
 
     - name: Terraform Apply
       run: terraform apply -auto-approve tfplan
