--- a/.github/workflows/azure-terraform.yml
+++ b/.github/workflows/azure-terraform.yml
@@ -34,11 +34,10 @@ jobs:
         -var="client_secret=${{ secrets.ARM_CLIENT_SECRET }}" \
         -var="subscription_id=${{ secrets.ARM_SUBSCRIPTION_ID }}" \
         -var="tenant_id=${{ secrets.ARM_TENANT_ID }}" \
-        -var="admin_password=${{ secrets.ARM_ADMIN_PASSWORD }}" \
 
         ls -lla
         pwd
 
 
-    # - name: Terraform Apply
-#   run: terraform apply -auto-approve tfplan
+    - name: Terraform Apply
+      run: terraform apply -auto-approve tfplan
